<resources>
    <string name="app_name">Daily Planner</string>
    <string name="daily_planner">Daily Planner</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_msg">New here ? Sign Up now</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
</resources>
